--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -42,8 +42,8 @@
                       enctype="multipart/form-data">
 
                     <div class="mb-3">
-                        <label for="fullName" class="form-label"><b>Name</b></label>
-                        <input type="text" class="form-control" id="fullName" name="fullName" placeholder="User name"
+                        <label for="name" class="form-label"><b>Name</b></label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="User name"
                                required>
                     </div>
                     <div class="mb-3">
