--- a/src/main/resources/templates/films/library.html
+++ b/src/main/resources/templates/films/library.html
@@ -1,69 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Projects - Brand</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/styles.min.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
+<link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
+<title>Library</title>
+<style>
+    body {
+        background: url(https://img.freepik.com/free-photo/abstract-dark-background-with-flowing-colouful-waves_1048-13124.jpg?w=826&t=st=1687463578~exp=1687464178~hmac=1221f616e4d8c6e919cf2812afd133f2586d11709ffce43b8313b495e54657cc) fixed;
+        background-size: 100%;
+    }
+</style>
 </head>
-
 <body>
-    <nav class="navbar navbar-dark navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/">
-        </a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" th:href="@{../index}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" th:href="@{../films/library}">Library</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{../sessions/schedule}">Schedule</a></li>
-
-                    <li class="nav-item"></li>
-                </ul>
-                <a class="btn btn-primary shadow" role="button" th:href="@{../users/login}">Sign in</a>
-                <a class="btn btn-primary shadow" role="button" th:href="@{../users/register}">Sign up</a>
+<div class="container-fluid p-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="/">CinemaDream</a>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav me-auto">
+                    <a class="nav-item nav-link" href="/">Home</a>
+                    <a class="nav-item nav-link" th:href="@{/sessions/schedule}">Schedule</a>
+                    <a class="nav-item nav-link" th:href="@{/films/library}">Library</a>
+                </div>
+                <a class="d-flex" th:if="${user.name == 'Guest'}">
+                    <a class="btn btn-primary shadow me-3"
+                       th:href="@{/users/register}">Sign up</a>
+                    <a class="btn btn-primary shadow me-3" th:href="@{/users/login}">Sign in</a>
+                </a>
+                <div class="d-flex" th:if="${user.name != 'Guest'}">
+                    <a class="btn btn-primary shadow me-3" href="#" th:text="${user.name}"></a>
+                    <a class="btn btn-primary shadow me-3" th:href="@{/users/logout}">Exit</a>
+                </div>
             </div>
         </div>
     </nav>
     <div class="container">
         <div class="row">
-            <table class="table table-dark">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Название</th>
-                    <th scope="col">Описание</th>
-                    <th scope="col">Год выхода фильма</th>
-                    <th scope="col">Жанр</th>
-                    <th scope="col">Минимальный возраст</th>
-                    <th scope="col">Продолжительность фильма</th>
-                    <th scope="col">Постер</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="film: ${films}">
-                    <td th:text="${film.id}"/>
-                    <td th:text="${film.name}"/>
-                    <td th:text="${film.description}"/>
-                    <td th:text="${film.year}"/>
-                    <td th:text="${film.genre}"/>
-                    <td th:text="${film.minimalAge}"/>
-                    <td th:text="${film.durationInMinutes}"/>
-                    <td>
-                        <img th:src="@{/files/{fileId}(fileId=${film.fileId})}" class="w-100"
-                             alt="No image"/>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+            <tr th:each="film: ${films}">
+                <div class="col-md-4">
+                    <div class="blog-card blog-card-blog">
+                        <div class="blog-card-image">
+                            <img th:src="@{/files/{fileId}(fileId=*{film.fileId})}" class="w-100" alt="No image">
+                            <div class="ripple-cont"></div>
+                        </div>
+                        <div class="blog-table">
+                            <h6 class="blog-category blog-text-success text-white" th:text="${film.genre}"><i
+                                    class="far fa-newspaper"></i> Жанр </h6>
+                            <h4 class="blog-card-caption text-white">
+                                <a th:text="${film.name}">Название фильма</a>
+                            </h4>
+                            <p class="blog-card-description text-white" th:text="${film.description}"> Описание </p>
+                            <div class="ftr">
+                                <div class="stats"><i class="far fa-clock">+</i></div>
+                                <div class="stats" th:text="${film.minimalAge}"><i class="far fa-clock"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
-    </section>
-    <footer class="bg-dark"></footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/script.min.js"></script>
+</div>
+
 </body>
 
 </html>
