--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
+
+    <!--  Зависимости Bootstrap-->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
+    <title>Home</title>
+    <style>
+        body {
+            background: url(https://img.freepik.com/free-photo/abstract-dark-background-with-flowing-colouful-waves_1048-13124.jpg?w=826&t=st=1687463578~exp=1687464178~hmac=1221f616e4d8c6e919cf2812afd133f2586d11709ffce43b8313b495e54657cc) fixed;
+            background-size: 100%;
+        }
+    </style>
 </head>
-
 <body>
-<nav class="navbar navbar-dark navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav">
-    <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link active" th:href="@{index}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{films/library}">Library</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{../sessions/schedule}">Schedule</a></li>
-                <li class="nav-item"></li>
-            </ul>
-            <a class="btn btn-primary shadow" role="button" th:href="@{users/login}">Sign in</a>
-            <a class="btn btn-primary shadow" role="button" th:href="@{users/register}">Sign up</a>
+<div class="container-fluid p-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="/index">CinemaDream</a>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav me-auto">
+                    <a class="nav-item nav-link" href="/index">Home</a>
+                    <a class="nav-item nav-link" th:href="@{/sessions/schedule}">Schedule</a>
+                    <a class="nav-item nav-link" th:href="@{/films/library}">Library</a>
+                </div>
+                <a class="d-flex" th:if="${user.name == 'Guest'}">
+                    <a class="btn btn-primary shadow me-3"
+                       th:href="@{/users/register}">Sign up</a>
+                    <a class="btn btn-primary shadow me-3" th:href="@{/users/login}">Sign in</a>
+                </a>
+                <div class="d-flex" th:if="${user.name != 'Guest'}">
+                    <a class="btn btn-primary shadow me-3" href="#" th:text="${user.name}"></a>
+                    <a class="btn btn-primary shadow me-3" th:href="@{/users/logout}">Exit</a>
+                </div>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
-    <header class="bg-dark">
+    <header class="bg-transparent">
         <div class="container pt-4 pt-xl-5">
             <div class="row pt-5">
                 <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
@@ -43,12 +68,7 @@
             </div>
         </div>
     </header>
-    <section></section>
-    <section></section>
-    <footer class="bg-dark"></footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
+
 </body>
 
 </html>
