--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,78 +1,92 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
+
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Projects - Brand</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/styles.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
+
+    <title>Sign in</title>
+    <style>
+        body {
+            background: url(https://img.freepik.com/free-photo/abstract-dark-background-with-flowing-colouful-waves_1048-13124.jpg?w=826&t=st=1687463578~exp=1687464178~hmac=1221f616e4d8c6e919cf2812afd133f2586d11709ffce43b8313b495e54657cc) fixed;
+            background-size: 100%;
+        }
+    </style>
 </head>
-
 <body>
-<nav class="navbar navbar-dark navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav">
-    <div class="container"><a class="navbar-brand d-flex align-items-center" href="/">
-    </a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link" th:href="@{../index}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{../films/library}">Library</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{../sessions/schedule}">Schedule</a></li>
-
-                <li class="nav-item"></li>
-            </ul>
-
-            <a class="btn btn-primary shadow" role="button" th:href="@{../users/login}">Sign in</a>
-            <a class="btn btn-primary shadow" role="button" th:href="@{../users/register}">Sign up</a>
-
-        </div>
-    </div>
-</nav>
-<div class="container">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <h2 class="text-center text-dark mt-5">Вход</h2>
-                <div class="text-center mb-5 text-dark">в учетную запись</div>
-                <div class="card my-5">
-                    <form class="card-body cardboard-color p-lg-5" th:action="@{../users/login}" method="post">
-                        <div class="text-center">
-                            <img alt="profile"
-                                 class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
-                                 src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Unknown_person.jpg" width="200px">
-                        </div>
-                        <div class="mb-3" th:if="${error}">
-                            <p class="text-danger" th:text="${error}"></p>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label"><b>Почта</b></label>
-                            <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"
-                                   placeholder="User@email.ru">
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label"><b>Пароль</b></label>
-                            <input type="password" class="form-control" id="password" placeholder="password">
-                        </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary px-5 mb-1 w-100">Войти</button>
-                            <button class="btn btn-success px-5 mb-5 w-100">Отмена</button>
-                        </div>
-                        <div id="emailHelp" class="form-text text-center mb-5 text-dark">Не зарегистрированы?
-                            <a th:href="@{../user/register}" class="text-dark fw-bold"> Зарегистрироваться</a>
-                        </div>
-                    </form>
+<div class="container-fluid p-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="/index">CinemaDream</a>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav me-auto">
+                    <a class="nav-item nav-link" href="/index">Home</a>
+                    <a class="nav-item nav-link" th:href="@{/sessions/schedule}">Schedule</a>
+                    <a class="nav-item nav-link" th:href="@{/films/library}">Library</a>
+                </div>
+                <a class="d-flex" th:if="${user.name == 'Guest'}">
+                    <a class="btn btn-primary shadow me-3"
+                       th:href="@{/users/register}">Sign up</a>
+                    <a class="btn btn-primary shadow me-3" th:href="@{/users/login}">Sign in</a>
+                </a>
+                <div class="d-flex" th:if="${user.name != 'Guest'}">
+                    <a class="btn btn-primary shadow me-3" href="#" th:text="${user.name}"></a>
+                    <a class="btn btn-primary shadow me-3" th:href="@{/users/logout}">Exit</a>
                 </div>
             </div>
         </div>
-
-
-
+    </nav>
+    <div class="container">
+        <div class="row">
+            <h2 class="text-center text-light mt-5">Sign in</h2>
+            <div class="col-3"></div>
+            <div class="col-6">
+                <form class="mt-3" th:action="@{/users/login}" method="post">
+                    <div class="mb-3" th:if="${error}">
+                        <p class="text-danger" th:text="${error}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label text-white"><b>Email</b></label>
+                        <input type="email" class="form-control" id="email" name="email"
+                               placeholder="ivan@mail.ru"
+                               required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label text-white"><b>Password</b></label>
+                        <input type="password" class="form-control" id="password" name="password"
+                               required>
+                    </div>
+                    <div class="mb-3 row">
+                        <div class="col-7 text-white">
+                            <p>Not Register? <span><a th:href="@{/users/register}">Register</a></span>
+                            </p>
+                        </div>
+                        <div class="col-5">
+                            <div class="row">
+                                <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/}">Cancel</a>
+                                </div>
+                                <div class="col-6">
+                                    <button class="btn btn-primary w-100" type="submit">Sign in
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-3"></div>
+        </div>
+    </div>
 </div>
-</section>
-<footer class="bg-dark"></footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../assets/js/script.min.js"></script>
 </body>
-
 </html>
