--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -1,78 +1,88 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
+
+    <!--  Зависимости Bootstrap-->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Projects - Brand</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/styles.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
+
+    <title>Sign up</title>
+    <style>
+        body {
+            background: url(https://img.freepik.com/free-photo/abstract-dark-background-with-flowing-colouful-waves_1048-13124.jpg?w=826&t=st=1687463578~exp=1687464178~hmac=1221f616e4d8c6e919cf2812afd133f2586d11709ffce43b8313b495e54657cc) fixed;
+            background-size: 100%;
+        }
+    </style>
 </head>
-
 <body>
-<nav class="navbar navbar-dark navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav">
-    <div class="container"><a class="navbar-brand d-flex align-items-center" href="/">
-    </a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link" th:href="@{../index}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{../films/library}">Library</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{../sessions/schedule}">Schedule</a></li>
-
-                <li class="nav-item"></li>
-            </ul>
-
-            <a class="btn btn-primary shadow" role="button" th:href="@{../users/login}">Sign in</a>
-            <a class="btn btn-primary shadow" role="button" th:href="@{../users/register}">Sign up</a>
-
-        </div>
-    </div>
-</nav>
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 offset-md-4">
-            <h2 class="text-center text-light mt-5">Sign up</h2>
-            <div class="card my-auto">
-                <div class="text-center">
-                    <img alt="profile"
-                         class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
-                         src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Unknown_person.jpg" width="200px">
+<div class="container-fluid p-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="/index">CinemaDream</a>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav me-auto">
+                    <a class="nav-item nav-link" href="/index">Home</a>
+                    <a class="nav-item nav-link" th:href="@{/sessions/schedule}">Schedule</a>
+                    <a class="nav-item nav-link" th:href="@{/films/library}">Library</a>
                 </div>
-                <form class="card-body cardboard-color p-lg-5" th:action="@{../users/register}" method="post"
-                      enctype="multipart/form-data">
-
-                    <div class="mb-3">
-                        <label for="name" class="form-label"><b>Name</b></label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="User name"
-                               required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label"><b>Email</b></label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="email@email.com"
-                               required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label"><b>Password</b></label>
-                        <input type="password" class="form-control" id="password" name="password" placeholder="password"
-                               required>
-                    </div>
-                    <div class="text-lg-center p-lg-5">
-                        <button type="submit" class="btn btn-primary px-5 mb-1 w-100">Save</button>
-                        <button class="btn btn-success px-5 mb-2 w-100" th:href="@{../index}">Cancel</button>
-                    </div>
+                <div class="d-flex" th:if="${user.name == 'Guest'}">
+                    <a class="btn btn-primary shadow me-3" th:href="@{/users/register}">Sign up</a>
+                    <a class="btn btn-primary shadow me-3" th:href="@{/users/login}">Sign in</a>
+                </div>
+                <div class="d-flex" th:if="${user.name != 'Guest'}">
+                    <a class="btn btn-primary shadow me-3" href="#" th:text="${user.name}"></a>
+                    <a class="btn btn-primary shadow me-3" th:href="@{/users/logout}">Exit</a>
+                </div>
             </div>
         </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <h2 class="text-center text-light mt-5">Sign up</h2>
+            <div class="col-3"></div>
+            <div class="col-6">
+                <form class="mt-3" th:action="@{/users/register}" method="post">
+                    <div class="mb-3">
+                        <label for="name" class="form-label text-white"><b>Name</b></label>
+                        <input type="text" class="form-control" id="name" name="name"
+                               placeholder="Name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label text-white"><b>Email</b></label>
+                        <input type="email" class="form-control" id="email" name="email"
+                               placeholder="Email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label text-white"><b>Password</b></label>
+                        <input type="password" class="form-control" id="password" name="password"
+                               placeholder="Password" required>
+                    </div>
+                    <div class="col-5">
+                        <div class="row">
+                            <div class="col-6"><a class="btn btn-danger w-100"
+                                                  th:href="@{/}">Cancel</a></div>
+                            <div class="col-6">
+                                <button class="btn btn-primary w-100" type="submit">
+                                    Register
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-3"></div>
+        </div>
     </div>
 </div>
-<div class="container">
-
-
-</div>
-</section>
-<footer class="bg-dark"></footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../assets/js/script.min.js"></script>
 </body>
-
 </html>
