--- a/src/main/resources/templates/errors/404.html
+++ b/src/main/resources/templates/errors/404.html
@@ -41,7 +41,7 @@
 </nav>
 
 <div class="container">
-    <h3 class="mt-3">Произошла ошибка</h3>
+    <h3 class="mt-3">Error</h3>
     <p class="text-danger" th:text="${message}"></p>
 </div>
 
