--- a/src/main/resources/templates/tickets/buying.html
+++ b/src/main/resources/templates/tickets/buying.html
@@ -92,11 +92,11 @@
 
             <div class="row">
                 <form>
-                    <button class="btn btn-info btn-lg btn-block m-1" type="submit"> Купить</button>
+                    <button class="btn btn-info btn-lg btn-block m-1" type="submit"> Buy</button>
                 </form>
                 <form>
                     <a class="nav-link mx-2" th:href="@{/films/library}">
-                        <button class="btn btn-light btn-lg btn-block m-1" type="reset">Отмена</button>
+                        <button class="btn btn-light btn-lg btn-block m-1" type="reset">Cancel</button>
                     </a>
                 </form>
             </div>
