--- a/src/main/resources/templates/errors/409.html
+++ b/src/main/resources/templates/errors/409.html
@@ -18,8 +18,8 @@
 
 <style>
     body {
-        background: url(https://img.freepik.com/free-photo/abstract-dark-background-with-flowing-colouful-waves_1048-13124.jpg?w=826&t=st=1687463578~exp=1687464178~hmac=1221f616e4d8c6e919cf2812afd133f2586d11709ffce43b8313b495e54657cc); /* Р¤РѕРЅРѕРІС‹Р№ С†РІРµС‚ Рё С„РѕРЅРѕРІС‹Р№ СЂРёСЃСѓРЅРѕРє*/
-        background-attachment: fixed; /* Р¤РѕРЅ СЃС‚СЂР°РЅРёС†С‹ С„РёРєСЃРёСЂСѓРµС‚СЃСЏ */
+        background: url(https://img.freepik.com/free-photo/abstract-dark-background-with-flowing-colouful-waves_1048-13124.jpg?w=826&t=st=1687463578~exp=1687464178~hmac=1221f616e4d8c6e919cf2812afd133f2586d11709ffce43b8313b495e54657cc); /* Фоновый цвет и фоновый рисунок*/
+        background-attachment: fixed; /* Фон страницы фиксируется */
         background-size: 100%;
     }
 </style>
@@ -41,7 +41,7 @@
 </nav>
 
 <div class="container">
-    <h3 class="mt-3 text-white">Error 404</h3>
+    <h3 class="mt-3 text-white">Error 409</h3>
     <p class="text-danger" th:text="${message}"></p>
 </div>
 
