--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -67,6 +67,7 @@
                         <input type="password" class="form-control" id="password" name="password"
                                placeholder="Password" required>
                     </div>
+                    <p class="text-center text-danger" th:text="${message}"></p>
                     <div class="col-5">
                         <div class="row">
                             <div class="col-6"><a class="btn btn-danger w-100"
